force-app/main/default/objects/OpportunityPackage__c/OpportunityPackage__c.object-meta.xml
<CustomObject>
    <label>Opportunity Package</label>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>Opportunity Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>