force-app/main/default/objects/OpportunityPackage__c/fields/BundlePackage__c.field-meta.xml
<CustomField>
    <fullName>BundlePackage__c</fullName>
    <label>Bundle Package</label>
    <referenceTo>Pack__c</referenceTo>
    <relationshipLabel>Opportunity Packages</relationshipLabel>
    <relationshipName>Opportunity_Packages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>