force-app/main/default/objects/OpportunityPackage__c/fields/Quote_Package__c.field-meta.xml
<CustomField>
    <fullName>Quote_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Package</label>
    <referenceTo>Quote_Package__c</referenceTo>
    <relationshipLabel>Opportunity Packages</relationshipLabel>
    <relationshipName>Opportunity_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>