force-app/main/default/objects/OpportunityPackage__c/fields/SortNumber__c.field-meta.xml
<CustomField>
    <fullName>SortNumber__c</fullName>
    <label>Sort Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>