force-app/main/default/objects/OpportunityPackage__c/fields/TotalAmmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmmount__c</fullName>
    <label>Total Ammount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>